sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value n
	while (!n==0) {
                ^AlgBubbleSort1:5: error: reassignment to val
	compteur=0
                ^AlgBubbleSort1:9: error: reassignment to val
			compteur=compteur+1
                                ^